[project]
name = "haiclass"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "laspy>=2.7.0",
    "lazrs>=0.8.1",
    "numpy>=2.5.1",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "torch>=2.7",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu128", marker = "sys_platform == 'win32' or sys_platform == 'linux'" }]

[dependency-groups]
dev = [
    "matplotlib>=3.11.0",
]
